[package]
name = "vzdv-bot"
version = "1.4.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2024"
description = "VATSIM ZDV Discord bot"
readme = "../README.md"
homepage = "https://github.com/Celeo/vzdv"
repository = "https://github.com/Celeo/vzdv"
documentation = "https://github.com/Celeo/vzdv"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
vzdv = { path = "../vzdv" }

anyhow = "1.0.95"
base64 = "0.22.1"
chrono-tz = "0.10.0"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
log = "0.4.22"
select = "0.6.0"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "sqlx-sqlite", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
vatsim_utils = "0.5.3"
