[package]
name = "vzdv"
version = "1.4.0"
edition = "2024"
authors = ["Celeo <mattboulanger@fastmail.com>"]
description = "VATSIM ZDV site core"
readme = "../README.md"
homepage = "https://github.com/Celeo/vzdv"
repository = "https://github.com/Celeo/vzdv"
documentation = "https://github.com/Celeo/vzdv"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
itertools = "0.14.0"
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "sqlx-sqlite", "chrono"] }
tokio = { version = "1.43.0" }
toml = "0.8.19"
vatsim_utils = "0.5.3"
fern = { version = "0.7.1", features = ["colored"] }
humantime = "2.1.0"
